--- a/10 Gauss, Gamma, Beta.ipynb
+++ b/10 Gauss, Gamma, Beta.ipynb
@@ -3406,8 +3406,7 @@
     "と表わされる. これを証明したい. そのためには\n",
     "\n",
     "$$\n",
-    "\\Gamma(p)\\Gamma(q)\n",
-    "=\n",
+    "\\Gamma(p)\\Gamma(q)=\n",
     "\\int_0^\\infty\n",
     "\\left(\n",
     "\\int_0^\\infty e^{-(x+y)} x^{p-1} y^{q-1}\\,dy\n",
@@ -3417,8 +3416,7 @@
     "が\n",
     "\n",
     "$$\n",
-    "\\Gamma(p+q)B(p,q)\n",
-    "=\\int_0^\\infty e^{-z}z^{p+q-1}\\,dz\n",
+    "\\Gamma(p+q)B(p,q)=\\int_0^\\infty e^{-z}z^{p+q-1}\\,dz\n",
     "\\,\\int_0^1 t^{p-1}(1-t)^{q-1}\\,dt\n",
     "$$\n",
     "\n",
@@ -3464,46 +3462,40 @@
     "ガンマ函数とベータ函数のあいだの関係式は1変数の置換積分と積分の順序交換のみを使って証明可能である. 条件 $A$ に対して, $x,y$ が $A$ をみたすとき値が $1$ になり, それ以外のときに値が $0$ になる $x,y$ の函数を $1_A(x,y)$ と書くことにすると,\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\Gamma(p)\\Gamma(q)\n",
-    "&=\n",
+    "\\Gamma(p)\\Gamma(q) &=\n",
     "\\int_0^\\infty\n",
     "\\left(\n",
     "\\int_0^\\infty e^{-(x+y)} x^{p-1} y^{q-1}\\,dy\n",
     "\\right)\\,dx\n",
-    "\\\\ &\n",
-    "=\n",
+    "\\\\ &=\n",
     "\\int_0^\\infty\n",
     "\\left(\n",
     "\\int_x^\\infty e^{-z} x^{p-1} (z-x)^{q-1}\\,dz\n",
     "\\right)\\,dx\n",
-    "\\\\ &\n",
-    "=\n",
+    "\\\\ &=\n",
     "\\int_0^\\infty\n",
     "\\left(\n",
     "\\int_0^\\infty 1_{x<z}(x,z) e^{-z} x^{p-1} (z-x)^{q-1}\\,dz\n",
     "\\right)\\,dx\n",
-    "\\\\ &\n",
-    "=\n",
+    "\\\\ &=\n",
     "\\int_0^\\infty\n",
     "\\left(\n",
     "\\int_0^\\infty 1_{x<z}(x,z) e^{-z} x^{p-1} (z-x)^{q-1}\\,dx\n",
     "\\right)\\,dz\n",
-    "\\\\ &\n",
-    "=\n",
+    "\\\\ &=\n",
     "\\int_0^\\infty\n",
     "\\left(\n",
     "\\int_0^z e^{-z} x^{p-1} (z-x)^{q-1}\\,dx\n",
     "\\right)\\,dz\n",
-    "\\\\ &\n",
-    "=\n",
+    "\\\\ &=\n",
     "\\int_0^\\infty\n",
     "\\left(\n",
     "\\int_0^1 e^{-z} (zt)^{p-1} (z-zt)^{q-1}z\\,dt\n",
     "\\right)\\,dz\n",
-    "\\\\ &\n",
-    "=\\int_0^\\infty e^{-z}z^{p+q-1}\\,dz\n",
-    "\\,\\int_0^1 t^{p-1}(1-t)^{q-1}\\,dt\n",
-    "=\\Gamma(p+q)B(p,q).\n",
+    "\\\\ &=\n",
+    "\\int_0^\\infty e^{-z}z^{p+q-1}\\,dz\n",
+    "\\,\\int_0^1 t^{p-1}(1-t)^{q-1}\\,dt =\n",
+    "\\Gamma(p+q)B(p,q).\n",
     "\\end{aligned}\n",
     "$$\n",
     "2つ目の等号で $y=z-x$ と置換積分し, 4つ目の等号で積分の順序を交換し, 6つ目の等号で $x=zt$ と置換積分した.\n",
