--- a/10 Gauss, Gamma, Beta.ipynb
+++ b/10 Gauss, Gamma, Beta.ipynb
@@ -1012,12 +1012,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**問題(ガンマ函数のスケール変換):** 次を示せ:\n",
+    "\n",
+    "$$\n",
+    "\\int_0^\\infty e^{-x/\\theta}x^{s-1}\\,dx = \\theta^s\\Gamma(s) \\quad (\\theta>0,\\ s>0).\n",
+    "$$\n",
+    "\n",
+    "ガンマ函数はこの形式でも非常によく使われる.\n",
+    "\n",
+    "**解答例:** $x=\\theta y$ と置換すると, $x^{s-1}\\,dx = \\theta^s y^{s-1}\\,dy$ なので示したい公式が得られる. $\\QED$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**問題(Riemannのゼータ函数の表示):** 次を示せ. \n",
+    "\n",
+    "$$\n",
+    "\\zeta(s)=\\sum_{n=1}^\\infty \\frac{1}{n^s} = \\frac{1}{\\Gamma(s)}\\int_0^\\infty \\frac{x^{s-1}\\,dx}{e^x-1} \\quad (s>0).\n",
+    "$$\n",
+    "\n",
+    "**解答例:** 上の問題より, $\\ds\\frac{1}{n^s} = \\frac{1}{\\Gamma(s)}\\int_0^\\infty e^{-nx}x^{s-1}\\,dx$ なので,\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\zeta(s) &=\\sum_{n=1}^\\infty \\frac{1}{n^s} =\n",
+    "\\frac{1}{\\Gamma(s)}\\sum_{n=1}^\\infty\\int_0^\\infty e^{-nx}x^{s-1}\\,dx\n",
+    "\\\\ &=\n",
+    "\\frac{1}{\\Gamma(s)}\\int_0^\\infty\\sum_{n=1}^\\infty e^{-nx}x^{s-1}\\,dx =\n",
+    "\\frac{1}{\\Gamma(s)}\\int_0^\\infty \\frac{x^{s-1}\\,dx}{e^x-1}\\,dx.\n",
+    "\\qquad \\QED\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**問題(ベータ函数の別の表示):** 次を示せ:\n",
     "\n",
     "$$\n",
     "B(p,q) = \n",
     "2\\int_0^{\\pi/2} (\\cos\\theta)^{2p-1}(\\sin\\theta)^{2q-1}\\,d\\theta =\n",
-    "\\int_0^\\infty \\frac{t^{p-1}}{(1+t)^{p+q}}\\,dt.\n",
+    "\\int_0^\\infty \\frac{t^{p-1}}{(1+t)^{p+q}}\\,dt =\n",
+    "\\frac{1}{p}\\int_0^\\infty \\frac{du}{(1+u^{1/p})^{p+q}}.\n",
     "$$\n",
     "\n",
     "ベータ函数のこれらの表示もよく使われる.\n",
@@ -1046,6 +1086,44 @@
     "B(p,q) = \n",
     "\\int_0^\\infty \\left(\\frac{t}{1+t}\\right)^{p-1} \\left(\\frac{1}{1+t}\\right)^{q-1}\\,\\frac{dt}{(1+t)^2} =\n",
     "\\int_0^\\infty \\frac{t^{p-1}}{(1+t)^{p+q}}\\,dt\n",
+    "$$\n",
+    "\n",
+    "さらに $t=u^{1/p}$ と置換すると, \n",
+    "\n",
+    "$$\n",
+    "t^{p-1}\\,dt = frac{1}{p} u\\, du\n",
+    "$$\n",
+    "\n",
+    "より, \n",
+    "\n",
+    "$$\n",
+    "B(p,q) = \\int_0^\\infty \\frac{t^{p-1}}{(1+t)^{p+q}}\\,dt =\n",
+    "\\frac{1}{p}\\int_0^\\infty \\frac{du}{(1+u^{1/p})^{p+q}}.\n",
+    "\\qquad \\QED\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**問題:** 次を示せ. $a<b$, $p>0$, $q>0$ のとき,\n",
+    "\n",
+    "$$\n",
+    "\\int_a^b (x-a)^{p-1}(b-x)^{q-1}\\,dx = (b-a)^{p+q-1} B(p,q).\n",
+    "$$\n",
+    "\n",
+    "**証明:** $x=(1-t)a+tb=a+(b-a)t$ と積分変数を置換すると,\n",
+    "\n",
+    "$$\n",
+    "\\int_a^b (x-a)^{p-1}(b-x)^{q-1}\\,dx =\n",
+    "\\int_0^1 ((b-a)t)^{p-1}((b-a)(1-t))^{q-1}(b-a)\\,dt = (b-a)^{p+q-1}B(p,q).\n",
+    "\\qquad\\QED\n",
+    "\n",
+    "**例:** $\\ds B(2,2)=\\int_0^1 x(1-x)\\,dx = \\frac{1}{2}-\\frac{1}{3}=\\frac{1}{6}$ なので\n",
+    "\n",
+    "$$\n",
+    "\\int_a^b (x-a)(b-x)\\,dx = (b-a)^3 B(2,2) = \\frac{(b-a)^3}{6}.\n",
     "\\qquad \\QED\n",
     "$$"
    ]
@@ -3924,7 +4002,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**問題(Stirlingの公式):**  $n! = \\int_0^\\infty e^{-t}t^n\\,dt$ にLapalceの方法を適用して, Stirlingの公式を導出せよ.\n",
+    "**問題(Stirlingの公式):**  $\\ds n! = \\int_0^\\infty e^{-t}t^n\\,dt$ にLapalceの方法を適用して, Stirlingの公式を導出せよ.\n",
     "\n",
     "**解答例:** 積分変数を $t=nx$ で置換すると,\n",
     "\n",
@@ -3944,7 +4022,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Laplaceの方法は本質的にGauss積分の応用である. Gauss積分をガンマ函数に置き換えることによって得られる一般化されたLaplaceの方法の素描については\n",
+    "Laplaceの方法は本質的にGauss積分の応用である.\n",
+    "\n",
+    "Gauss積分をガンマ函数に置き換えることによって得られる一般化されたLaplaceの方法の素描については\n",
     "\n",
     "* 黒木玄, <a href=\"https://genkuroki.github.io/documents/20161014GeneralizedLaplace.pdf\">一般化されたLaplaceの方法</a>\n",
     "\n",
