Recreate Calculus-20180702-2.pdf

--- a/10 Gauss, Gamma, Beta.ipynb
+++ b/10 Gauss, Gamma, Beta.ipynb
@@ -3952,7 +3952,7 @@
     "**問題:** $n=1,2,\\ldots,10$ について Stirling の公式の相対誤差\n",
     "\n",
     "$$\n",
-    "\\frac{n^2 e^{-n} \\sqrt{2\\pi n}}{n!}-1\n",
+    "\\frac{n^n e^{-n} \\sqrt{2\\pi n}}{n!}-1\n",
     "$$\n",
     "\n",
     "を求めよ.\n",
