several minor corrections

--- a/09 integration.ipynb
+++ b/09 integration.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 積分\n",
+    "# 09 積分\n",
     "\n",
     "黒木玄\n",
     "\n",
@@ -233,7 +233,7 @@
     "\n",
     "となる. 速さ $\\|v(t)\\|=\\|x'(t)\\|$ の時刻 $a$ から $b$ までの積分の値は点の運動の軌跡(曲線)の長さなので, この不等式は $x(a)$ と $x(b)$ の距離は $x(a)$ と $x(b)$ を結ぶ曲線の長さ以下になることを意味する. \n",
     "\n",
-    "これより, ベクトル値函数に拡張された性質(E)は, 直観的には当然そうなるべき結果を意味していることがわかる. "
+    "これより, ベクトル値函数に拡張された性質(E)は, 直観的には当然そうなるべき結果を意味していることがわかる.  $\\QED$"
    ]
   },
   {
