--- a/07 example of asymptotic expansion.ipynb
+++ b/07 example of asymptotic expansion.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 漸近展開の有名な例\n",
+    "# 07 漸近展開の有名な例\n",
     "\n",
     "黒木玄\n",
     "\n",
@@ -237,7 +237,7 @@
    "source": [
     "### $F_0(1/10)$ の漸近展開を用いた数値計算\n",
     "\n",
-    "$x>$ のとき $0<F_n(x)\\leqq n!\\,x^{n+1}$ となるのであった. $x=1/10$ のとき $n!\\,x^{n+1}$ が最小になる $n$ は $n=9,10$ であることを確認できる. そのとき $n!\\,x^{n+1} = 3.6288\\times10^{-5}$ である.  したがって, $n=9,10$ のときの $\\ds\\sum_{k=0}^{n-1} (-1)^k k!\\, x^{k+1}$ による $F_0(x)$ の近似は最良になると予想される."
+    "$x>0$ のとき $0<F_n(x)\\leqq n!\\,x^{n+1}$ となるのであった. $x=1/10$ のとき $n!\\,x^{n+1}$ が最小になる $n$ は $n=9,10$ であることを確認できる. そのとき $n!\\,x^{n+1} = 3.6288\\times10^{-5}$ である.  したがって, $n=9,10$ のときの $\\ds\\sum_{k=0}^{n-1} (-1)^k k!\\, x^{k+1}$ による $F_0(x)$ の近似は最良になると予想される."
    ]
   },
   {
