Legendre's proof of multiplication formua of Gamma function

--- a/10 Gauss, Gamma, Beta.ipynb
+++ b/10 Gauss, Gamma, Beta.ipynb
@@ -5035,6 +5035,145 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**問題:** Gauss's multiplication formula の $n=2$ の場合である Legendre's duplication formula は定積分の計算だけで証明できるのであった. 上の解答例は本質的にStirlingの近似公式を使っている. Gauss's multiplication formula にも定積分の計算だけで証明する方法がないだろうか. 以下の方針で Gauss's multiplication formula を証明せよ. ただし, (3)の証明には Euler's reflection formula は使ってよいことにする. \n",
+    "\n",
+    "$t>0$ に対する $n-1$ 重積分 $I(t)$ を次のように定める:\n",
+    "\n",
+    "$$\n",
+    "I(t) = \\int_0^\\infty\\cdots\\int_0^\\infty \n",
+    "e^{-(t^n/(x_2\\cdots x_n)+x_2+\\cdots+x_n)}\n",
+    "x_2^{-(n-1)/n}x_3^{-(n-2)/n}\\cdots x_n^{-1/n} \\,dx_2\\cdots dx_n.\n",
+    "$$\n",
+    "\n",
+    "以下を示せ:\n",
+    "\n",
+    "(1) $\\ds I(t) = \\Gamma\\left(\\frac{1}{n}\\right)\\Gamma\\left(\\frac{2}{n}\\right)\\cdots\\Gamma\\left(\\frac{n-1}{n}\\right)e^{-nt}$.\n",
+    "\n",
+    "(2) $\\ds \\Gamma(s)\\Gamma\\left(s+\\frac{1}{n}\\right)\\cdots\\Gamma\\left(s+\\frac{n-1}{n}\\right) = \n",
+    "n^{1-ns}\\Gamma\\left(\\frac{1}{n}\\right)\\cdots\\Gamma\\left(\\frac{n-1}{n}\\right)\\Gamma(ns)$.\n",
+    "\n",
+    "(3) $\\ds \\Gamma\\left(\\frac{1}{n}\\right)\\cdots\\Gamma\\left(\\frac{n-1}{n}\\right) = (2\\pi)^{(n-1)/2} n^{-1/2}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**注意:** (1), (2) の方針の証明は\n",
+    "\n",
+    "* Andrews, G.E., Askey,R., and Roy, R. Special functions. Encyclopedia of Mathematics and its Applications, Vol. 71, Cambridge University Press, 1999, 2000, 681 pages.\n",
+    "\n",
+    "のpp.24-25で解説されている. その方法は\n",
+    "\n",
+    "* Liouville, J. Sur un théorème relatif à l’intégrale eulérienne de seconde espèce. Journal de mathématiques pures et appliquées 1re série, tome 20 (1855), p. 157-160. <a href=\"http://sites.mathdoc.fr/JMPA/PDF/JMPA_1855_1_20_A15_0.pdf\">PDF</a>\n",
+    "\n",
+    "の方法の再構成ということらしい."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**解答例:** (1) $t=0$ のとき, $I(0)$ の積分は変数分離形になって, \n",
+    "\n",
+    "$$\n",
+    "I(0) = \\Gamma\\left(\\frac{1}{n}\\right)\\Gamma\\left(\\frac{2}{n}\\right)\\cdots\\Gamma\\left(\\frac{n-1}{n}\\right)\n",
+    "$$\n",
+    "\n",
+    "となることがすぐにわかる. $I(t)$ を $t$ で微分して, $\\ds x_2 = \\frac{t^n}{x_3\\cdots x_n x_1}$ によって積分変数 $x_2$ を積分変数 $x_1$ に変換すると, \n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "I'(t) &=\n",
+    "\\int_0^\\infty\\cdots\\int_0^\\infty \n",
+    "e^{-(t^n/(x_2\\cdots x_n)+x_2+\\cdots+x_n)}\n",
+    "\\frac{-nt^{n-1}}{x_2\\cdots x_n}\n",
+    "x_2^{-(n-1)/n}x_3^{-(n-2)/n}\\cdots x_n^{-1/n} \\,dx_2\\cdots dx_n\n",
+    "\\\\ &=\n",
+    "-n\\int_0^\\infty\\cdots\\int_0^\\infty \n",
+    "e^{-(t^n/(x_2\\cdots x_n)+x_2+\\cdots+x_n)}\n",
+    "t^{n-1}\n",
+    "x_2^{-(n-1)/n-1}x_3^{-(n-2)/n-1}\\cdots x_n^{-1/n-1} \\,dx_2\\cdots dx_n\n",
+    "\\\\ &=\n",
+    "-n\\int_0^\\infty\\cdots\\int_0^\\infty \n",
+    "e^{-(x_1+t^n/(x_3\\cdots x_n x_1)+x_3+\\cdots+x_n)}\n",
+    "t^{n-1}\n",
+    "\\left(\\frac{t^n}{x_3\\cdots x_n x_1}\\right)^{-(2n-1)/n}\n",
+    "x_3^{-(2n-2)/n}\\cdots x_n^{-(n+1)/n} \\frac{t^n}{x_3\\cdots x_n x_1^2}\\,dx_3\\cdots dx_n\\,dx_1\n",
+    "\\\\ &=\n",
+    "-n\\int_0^\\infty\\cdots\\int_0^\\infty \n",
+    "e^{-(x_1+t^n/(x_3\\cdots x_n x_1)+x_3+\\cdots+x_n)}\n",
+    "x_3^{-(n-1)/n}\\cdots x_n^{-2/n} x_1^{-1/n}\\,dx_3\\cdots dx_n\\,dx_1\n",
+    "\\\\ &=\n",
+    "-n I(t)\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "ゆえに $I(t)=I(0)e^{-nt}$.  これで(1)が示された."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(2) 左辺をLHSと書き, $\\ds x_1=\\frac{t^n}{x_2\\cdots x_n}$ とおくと, \n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\text{LHS} &=\n",
+    "\\int_0^\\infty\\cdots\\int_0^\\infty e^{-(x_1+\\cdots+x_n)} x_1^{s-1}x_2^{s-(n-1)/n}\\cdots x_n^{s-1/n}\\,dx_1\\cdots dx_n\n",
+    "\\\\ &=\n",
+    "\\int_0^\\infty\\cdots\\int_0^\\infty e^{-(t^n/(x_2\\cdots x_n)+x_2\\cdots+x_n)}\n",
+    "\\left(\\frac{t^n}{x_2\\cdots x_n}\\right)^{s-1}\n",
+    "x_2^{s-(n-1)/n}\\cdots x_n^{s-1/n}\n",
+    "\\frac{nt^{n-1}}{x_2\\cdots x_n}\n",
+    "\\,dt\\,dx_2\\cdots dx_n\n",
+    "\\\\ &=\n",
+    "n\\int_0^\\infty\\cdots\\int_0^\\infty e^{-(t^n/(x_2\\cdots x_n)+x_2\\cdots+x_n)}\n",
+    "x_2^{-(n-1)/n}\\cdots x_n^{-1/n} t^{ns-1}\n",
+    "\\,dx_2\\cdots dx_n\\,dt\n",
+    "\\\\ &=\n",
+    "n\\int_0^\\infty I(t) t^{ns-1}\\,dt =\n",
+    "nI(0)\\int_0^\\infty e^{-nt} t^{ns-1}\\,dt =\n",
+    "n^{1-ns}I(0)\\Gamma(ns).\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "これで(2)が示された."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(3) $I(0)=(2\\pi)^{(n-1)/2}n^{-1/2}$ を示したい. そのためには $I(0)^2 = (2\\pi)^{n-1} n^{-1}$ を示せばよい. Euler's reflection formula より, $\\ds \\Gamma\\left(\\frac{k}{n}\\right)\\Gamma\\left(\\frac{n-k}{n}\\right) = \\frac{\\pi}{\\sin(k\\pi/n)}$ なので\n",
+    "\n",
+    "$$\n",
+    "I(0)^2 = \\frac{\\pi}{\\sin(\\pi/n)}\\frac{\\pi}{\\sin(2\\pi/n)}\\cdots\\frac{\\pi}{\\sin((n-1)\\pi/n)}.\n",
+    "$$\n",
+    "\n",
+    "そして, \n",
+    "\n",
+    "$$\n",
+    "\\prod_{k=1}^{n-1}\\sin\\frac{k\\pi}{n} = \n",
+    "\\prod_{k=1}^{n-1}\\frac{e^{\\pi ik/n}-e^{-\\pi ik/n}}{2i} =\n",
+    "\\frac{e^{\\pi i(1+2+\\cdots+(n-1))/n}}{2^{n-1}i^{n-1}}\\prod_{k=1}^{n-1}(1-e^{-2\\pi ik/n}) =\n",
+    "\\frac{1}{2^{n-1}}\\prod_{k=1}^{n-1}(1-e^{-2\\pi ik/n})\n",
+    "$$\n",
+    "\n",
+    "であり,  \n",
+    "\n",
+    "$$\n",
+    "\\frac{x^n-1}{x-1} = \\prod_{k=1}^{n-1}(x-e^{-2\\pi ik/n})\n",
+    "$$\n",
+    "\n",
+    "において $x\\to 1$ とすると $\\ds \\prod_{k=1}^{n-1}(1-e^{-2\\pi ik/n})=n$ が得られる. 以上を合わせると(3)が得られる. $\\QED$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Laplaceの方法\n",
     "\n",
     "**Laplaceの方法:** Stirlingの公式の証明の解説のようにして見付かる変数変換はより一般の場合に非常に有用である. 以下では $\\int_{-\\infty}^\\infty$ や $\\int_0^\\infty$ を単に $\\int$ と書くことにし, \n",
