links to pdfs added

--- a/06 Taylor's theorems.ipynb
+++ b/06 Taylor's theorems.ipynb
@@ -12,10 +12,13 @@
     "\n",
     "* Copyright 2018 Gen Kuroki\n",
     "* License: MIT https://opensource.org/licenses/MIT\n",
+    "* Repository: https://github.com/genkuroki/Calculus\n",
     "\n",
     "このファイルは次の場所できれいに閲覧できる:\n",
     "\n",
     "* http://nbviewer.jupyter.org/github/genkuroki/Calculus/blob/master/06%20Taylor%27s%20theorems.ipynb\n",
+    "\n",
+    "* https://genkuroki.github.io/documents/Calculus/06%20Taylor%27s%20theorems.pdf\n",
     "\n",
     "このファイルは <a href=\"https://juliabox.com\">Julia Box</a> で利用できる.\n",
     "\n",
