--- a/03 pi, e, and Euler's γ.ipynb
+++ b/03 pi, e, and Euler's γ.ipynb
@@ -12,10 +12,13 @@
     "\n",
     "* Copyright 2018 Gen Kuroki\n",
     "* License: MIT https://opensource.org/licenses/MIT\n",
+    "* Repository: https://github.com/genkuroki/Calculus\n",
     "\n",
     "このファイルは次の場所できれいに閲覧できる:\n",
     "\n",
     "* http://nbviewer.jupyter.org/github/genkuroki/Calculus/blob/master/03%20pi%2C%20e%2C%20and%20Euler's%20γ.ipynb\n",
+    "\n",
+    "* https://genkuroki.github.io/documents/Calculus/03%20pi%2C%20e%2C%20and%20Euler's%20%CE%B3.pdf\n",
     "\n",
     "このファイルは <a href=\"https://juliabox.com\">Julia Box</a> で利用できる.\n",
     "\n",
