--- a/07 example of asymptotic expansion.ipynb
+++ b/07 example of asymptotic expansion.ipynb
@@ -12,10 +12,13 @@
     "\n",
     "* Copyright 2018 Gen Kuroki\n",
     "* License: MIT https://opensource.org/licenses/MIT\n",
+    "* Repository: https://github.com/genkuroki/Calculus\n",
     "\n",
     "このファイルは次の場所できれいに閲覧できる:\n",
     "\n",
     "* http://nbviewer.jupyter.org/github/genkuroki/Calculus/blob/master/07%20example%20of%20asymptotic%20expansion.ipynb\n",
+    "\n",
+    "* https://genkuroki.github.io/documents/Calculus/07%20example%20of%20asymptotic%20expansion.pdf\n",
     "\n",
     "このファイルは <a href=\"https://juliabox.com\">Julia Box</a> で利用できる.\n",
     "\n",
