--- a/10 Gauss, Gamma, Beta.ipynb
+++ b/10 Gauss, Gamma, Beta.ipynb
@@ -41,6 +41,14 @@
     "\\newcommand\\bra{\\langle}\n",
     "\\newcommand\\ket{\\rangle}\n",
     "\\newcommand\\d{\\partial}\n",
+    "\\newcommand\\sech{\\operatorname{sech}}\n",
+    "\\newcommand\\cosec{\\operatorname{cosec}}\n",
+    "\\newcommand\\sign{\\operatorname{sign}}\n",
+    "\\newcommand\\sinc{\\operatorname{sinc}}\n",
+    "\\newcommand\\real{\\operatorname{Re}}\n",
+    "\\newcommand\\imag{\\operatorname{Im}}\n",
+    "\\newcommand\\Li{\\operatorname{Li}}\n",
+    "\\newcommand\\PROD{\\mathop{\\coprod\\kern-1.35em\\prod}}\n",
     "$"
    ]
   },
@@ -7366,12 +7374,19 @@
     "\\exp(-f'(0)) = \\prod_{n=1}^N a_n\n",
     "$$\n",
     "\n",
-    "が成立している. もしも $N=\\infty$ のときの $\\ds\\prod_{n=1}^\\infty a_n$ が発散していても, $\\ds f(s)=\\sum_{n=1}^\\infty \\frac{1}{a_n^s}$ の解析接続によって, 左辺の $\\exp(-f'(0))$ はwell-definedになる可能性がある. そのとき, $\\exp(-f'(0))$ を $a_n$ 達の**ゼータ正規化積**と呼ぶ. \n",
+    "が成立している. もしも $N=\\infty$ のときの $\\ds\\prod_{n=1}^\\infty a_n$ が発散していても, $\\ds f(s)=\\sum_{n=1}^\\infty \\frac{1}{a_n^s}$ の解析接続によって, 左辺の $\\exp(-f'(0))$ はwell-definedになる可能性がある. そのとき, $\\exp(-f'(0))$ を\n",
+    "\n",
+    "$$\n",
+    "\\exp(-f'(0)) = \\PROD_{n=1}^\\infty a_n\n",
+    "$$\n",
+    "\n",
+    "と書き, $a_n$ 達の**ゼータ正規化積**と呼ぶ. \n",
     "\n",
     "例えば $x,x+1,x+2,x+3,\\ldots$ のゼータ正規化積はLerchの定理より, $\\ds\\frac{\\sqrt{2\\pi}}{\\Gamma(x)}$ になる. 特に $x=1$ のときの $1,2,3,4,\\ldots$ のゼータ正規化積は $\\sqrt{2\\pi}$ になる:\n",
     "\n",
     "$$\n",
-    "\"\\! 1\\times 2\\times 3\\times 4\\times\\cdots \\!\" \\,= \\exp(-\\zeta'(0)) = \\sqrt{2\\pi}.\n",
+    "\"\\! 1\\times 2\\times 3\\times 4\\times\\cdots \\!\" \\,= \n",
+    "\\PROD_{n=1}^\\infty n = \\exp(-\\zeta'(0)) = \\sqrt{2\\pi}.\n",
     "$$\n",
     "\n",
     "これは\n",
