--- a/10 Gauss, Gamma, Beta.ipynb
+++ b/10 Gauss, Gamma, Beta.ipynb
@@ -8614,7 +8614,7 @@
     "{n^{-n}(ns+n-1)\\cdots(ns+1)(ns)} = f(s).\n",
     "$$\n",
     "\n",
-    "このノートの下の方で証明されているStirlingの近似公式\n",
+    "上で証明されているStirlingの近似公式\n",
     "\n",
     "$$\n",
     "\\Gamma(s) \\sim s^s e^{-s} s^{-1/2}\\sqrt{2\\pi} \\quad (s\\to\\infty)\n",
@@ -8649,7 +8649,7 @@
     "s^{s+(n-1)/n-1/2} e^{-s} \\sqrt{2\\pi}\n",
     "\\\\ &\n",
     "\\therefore\\quad\n",
-    "\\Gamma(s)\\Gamma\\left(1+\\frac{1}{n}\\right)\\cdots\\Gamma\\left(s+\\frac{n-1}{n}\\right)\\sim\n",
+    "\\Gamma(s)\\Gamma\\left(s+\\frac{1}{n}\\right)\\cdots\\Gamma\\left(s+\\frac{n-1}{n}\\right)\\sim\n",
     "s^{ns-1/2}e^{-ns}(2\\pi)^{n/2}\n",
     "\\\\ &\n",
     "n^{-ns}\\Gamma(ns)\\sim\n",
