Machin's formula of pi/4

--- a/10 Gauss, Gamma, Beta.ipynb
+++ b/10 Gauss, Gamma, Beta.ipynb
@@ -6713,7 +6713,7 @@
     "\\tag{1}\n",
     "$$\n",
     "\n",
-    "と $\\ds \\left(1+\\frac{t}{a}\\right)^a$, $\\ds \\left(1-\\frac{t}{a}\\right)^{-a}$ がそれぞれ $a,b$ について単調増加, 単調減少することを用いて正当化せよ.\n",
+    "と $\\ds \\left(1+\\frac{t}{a}\\right)^a$, $\\ds \\left(1-\\frac{t}{b}\\right)^{-b}$ がそれぞれ $a,b$ について単調増加, 単調減少することを用いて正当化せよ.\n",
     "\n",
     "**解答例:** 問題文の中で与えられた不等式の全体の逆元を取り, $a=m$, $b=n$ とおくと, \n",
     "\n",
