--- a/Analysis A 2018.ipynb
+++ b/Analysis A 2018.ipynb
@@ -907,8 +907,16 @@
     "二項展開によって, $0<x<1$ のとき,\n",
     "\n",
     "$$\n",
+    "\\begin{aligned}\n",
+    "&\n",
+    "(-1)^n\\binom{-1/2}{n} = \\frac{(1/2)(3/2)\\cdots((2n+1)/2)}{n!} =\n",
+    "\\frac{1\\cdot3\\cdots(2n-1)}{2^n n!} =\n",
+    "\\frac{(2n)!}{2^{2n} (n!)^2} =\n",
+    "\\binom{2n}{n}2^{-2n},\n",
+    "\\\\ &\n",
     "(1-x)^{-1/2} = \\sum_{n=0}^\\infty \\binom{-1/2}{n}(-x)^n =\n",
     "\\sum_{n=0}^\\infty \\binom{2n}{n}2^{-2n}x^n\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "なので, $\\Gamma(1/2)=\\sqrt{\\pi}$, $\\Gamma(1)=1$ を使うと, \n",
