generalized Hurwitz zeta

--- a/A02 Hurwitz zeta function.ipynb
+++ b/A02 Hurwitz zeta function.ipynb
@@ -46,7 +46,7 @@
    },
    "source": [
     "<h1>目次<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Bernoulli多項式との関係\" data-toc-modified-id=\"Bernoulli多項式との関係-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Bernoulli多項式との関係</a></span></li><li><span><a href=\"#対数ガンマ函数との関係\" data-toc-modified-id=\"対数ガンマ函数との関係-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>対数ガンマ函数との関係</a></span></li><li><span><a href=\"#対数正弦函数との関係\" data-toc-modified-id=\"対数正弦函数との関係-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>対数正弦函数との関係</a></span></li><li><span><a href=\"#周期的Bernoulli多項式のFourier展開\" data-toc-modified-id=\"周期的Bernoulli多項式のFourier展開-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>周期的Bernoulli多項式のFourier展開</a></span></li><li><span><a href=\"#Milnor型対数多重正弦函数のFourier展開\" data-toc-modified-id=\"Milnor型対数多重正弦函数のFourier展開-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Milnor型対数多重正弦函数のFourier展開</a></span></li><li><span><a href=\"#以上で扱ったFourier級数に関する解説\" data-toc-modified-id=\"以上で扱ったFourier級数に関する解説-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>以上で扱ったFourier級数に関する解説</a></span><ul class=\"toc-item\"><li><span><a href=\"#概略\" data-toc-modified-id=\"概略-6.1\"><span class=\"toc-item-num\">6.1&nbsp;&nbsp;</span>概略</a></span></li><li><span><a href=\"#Milnor型対数多重正弦函数のFourier展開公式の証明\" data-toc-modified-id=\"Milnor型対数多重正弦函数のFourier展開公式の証明-6.2\"><span class=\"toc-item-num\">6.2&nbsp;&nbsp;</span>Milnor型対数多重正弦函数のFourier展開公式の証明</a></span></li></ul></li><li><span><a href=\"#カノニカル分布との関係\" data-toc-modified-id=\"カノニカル分布との関係-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>カノニカル分布との関係</a></span><ul class=\"toc-item\"><li><span><a href=\"#カノニカル分布の定義\" data-toc-modified-id=\"カノニカル分布の定義-7.1\"><span class=\"toc-item-num\">7.1&nbsp;&nbsp;</span>カノニカル分布の定義</a></span></li><li><span><a href=\"#カノニカル分布とBernoulli多項式の一般化の関係\" data-toc-modified-id=\"カノニカル分布とBernoulli多項式の一般化の関係-7.2\"><span class=\"toc-item-num\">7.2&nbsp;&nbsp;</span>カノニカル分布とBernoulli多項式の一般化の関係</a></span></li><li><span><a href=\"#Hurwitzのゼータ函数の移動平均\" data-toc-modified-id=\"Hurwitzのゼータ函数の移動平均-7.3\"><span class=\"toc-item-num\">7.3&nbsp;&nbsp;</span>Hurwitzのゼータ函数の移動平均</a></span></li><li><span><a href=\"#多重Hurwitzゼータ函数の移動平均\" data-toc-modified-id=\"多重Hurwitzゼータ函数の移動平均-7.4\"><span class=\"toc-item-num\">7.4&nbsp;&nbsp;</span>多重Hurwitzゼータ函数の移動平均</a></span></li><li><span><a href=\"#一般の確率分布への自明な一般化\" data-toc-modified-id=\"一般の確率分布への自明な一般化-7.5\"><span class=\"toc-item-num\">7.5&nbsp;&nbsp;</span>一般の確率分布への自明な一般化</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Bernoulli多項式との関係\" data-toc-modified-id=\"Bernoulli多項式との関係-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Bernoulli多項式との関係</a></span></li><li><span><a href=\"#対数ガンマ函数との関係\" data-toc-modified-id=\"対数ガンマ函数との関係-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>対数ガンマ函数との関係</a></span></li><li><span><a href=\"#対数正弦函数との関係\" data-toc-modified-id=\"対数正弦函数との関係-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>対数正弦函数との関係</a></span></li><li><span><a href=\"#周期的Bernoulli多項式のFourier展開\" data-toc-modified-id=\"周期的Bernoulli多項式のFourier展開-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>周期的Bernoulli多項式のFourier展開</a></span></li><li><span><a href=\"#Milnor型対数多重正弦函数のFourier展開\" data-toc-modified-id=\"Milnor型対数多重正弦函数のFourier展開-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Milnor型対数多重正弦函数のFourier展開</a></span></li><li><span><a href=\"#以上で扱ったFourier級数に関する解説\" data-toc-modified-id=\"以上で扱ったFourier級数に関する解説-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>以上で扱ったFourier級数に関する解説</a></span><ul class=\"toc-item\"><li><span><a href=\"#概略\" data-toc-modified-id=\"概略-6.1\"><span class=\"toc-item-num\">6.1&nbsp;&nbsp;</span>概略</a></span></li><li><span><a href=\"#Milnor型対数多重正弦函数のFourier展開公式の証明\" data-toc-modified-id=\"Milnor型対数多重正弦函数のFourier展開公式の証明-6.2\"><span class=\"toc-item-num\">6.2&nbsp;&nbsp;</span>Milnor型対数多重正弦函数のFourier展開公式の証明</a></span></li></ul></li><li><span><a href=\"#カノニカル分布との関係\" data-toc-modified-id=\"カノニカル分布との関係-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>カノニカル分布との関係</a></span><ul class=\"toc-item\"><li><span><a href=\"#カノニカル分布の定義\" data-toc-modified-id=\"カノニカル分布の定義-7.1\"><span class=\"toc-item-num\">7.1&nbsp;&nbsp;</span>カノニカル分布の定義</a></span></li><li><span><a href=\"#カノニカル分布とBernoulli多項式の一般化の関係\" data-toc-modified-id=\"カノニカル分布とBernoulli多項式の一般化の関係-7.2\"><span class=\"toc-item-num\">7.2&nbsp;&nbsp;</span>カノニカル分布とBernoulli多項式の一般化の関係</a></span></li><li><span><a href=\"#Hurwitzのゼータ函数の移動平均\" data-toc-modified-id=\"Hurwitzのゼータ函数の移動平均-7.3\"><span class=\"toc-item-num\">7.3&nbsp;&nbsp;</span>Hurwitzのゼータ函数の移動平均</a></span></li><li><span><a href=\"#多重Hurwitzゼータ函数の移動平均\" data-toc-modified-id=\"多重Hurwitzゼータ函数の移動平均-7.4\"><span class=\"toc-item-num\">7.4&nbsp;&nbsp;</span>多重Hurwitzゼータ函数の移動平均</a></span></li><li><span><a href=\"#移動平均に関する結果の一般の確率分布への自明な一般化\" data-toc-modified-id=\"移動平均に関する結果の一般の確率分布への自明な一般化-7.5\"><span class=\"toc-item-num\">7.5&nbsp;&nbsp;</span>移動平均に関する結果の一般の確率分布への自明な一般化</a></span></li><li><span><a href=\"#一般化された1重のHurwitz型ゼータ函数の負の整数での特殊値\" data-toc-modified-id=\"一般化された1重のHurwitz型ゼータ函数の負の整数での特殊値-7.6\"><span class=\"toc-item-num\">7.6&nbsp;&nbsp;</span>一般化された1重のHurwitz型ゼータ函数の負の整数での特殊値</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -9650,7 +9650,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 一般の確率分布への自明な一般化\n",
+    "### 移動平均に関する結果の一般の確率分布への自明な一般化\n",
     "\n",
     "$\\R$ 上の確率分布 $p_j(x)$ の分配函数を\n",
     "\n",
@@ -9775,6 +9775,120 @@
     "\\int_\\R \\zeta(s,x+t;p) e^{-x^2/(2\\sigma^2)}\\,dt = \n",
     "\\frac{1}{\\Gamma(s)}\\int_0^\\infty e^{-\\beta x}\\beta^{s-2}\\,d\\beta =\n",
     "\\frac{1}{s-1}\\frac{1}{x^{s-1}}.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 一般化された1重のHurwitz型ゼータ函数の負の整数での特殊値\n",
+    "\n",
+    "Hurwitzのゼータ函数は区間 $[0,1]$ 上の一様分布に対応する一般化された1重のHurwitz型ゼータ函数である:\n",
+    "\n",
+    "$$\n",
+    "\\zeta(s,x) = \n",
+    "\\frac{1}{\\Gamma(s)}\n",
+    "\\int_0^\\infty \\frac{\\beta}{1-e^{-\\beta}}e^{-\\beta x}\\beta^{s-2}\\,d\\beta =\n",
+    "\\sum_{k=0}^\\infty \\frac{1}{(x+k)^s}.\n",
+    "$$\n",
+    "\n",
+    "右辺の積分は $\\real s>1$ で収束している. 他の $s$ における値は解析接続で定義しておく. このとき, \n",
+    "\n",
+    "$$\n",
+    "\\zeta(1-r,x) = -\\frac{B_r(x)}{r}\\quad (r=1,2,3,\\ldots)\n",
+    "$$\n",
+    "\n",
+    "となることが知られている. すなわち, Hurwitzのゼータ函数の $0$ 以下での整数 $s=1-r$ での特殊値はBernoulli多項式の $-r$ 分の1に一致する.\n",
+    "\n",
+    "この結果は以下のような計算によって, 一般の(適切な条件を満たす)確率分布 $p(x)$ が定める1重のHurwitz型ゼータ函数に拡張される.  以下そのことを説明しよう."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$p(x)$ は(適切な条件を満たす) $\\R$ 上の確率分布であるとし, $Z(\\beta)$ はその分配函数であるとし, 対応する一般化されたBernoulli多項式を $P_k(x)$ と表す:\n",
+    "\n",
+    "$$\n",
+    "Z(\\beta) = \\int_\\R e^{-\\beta x}p(x)\\,dx, \\quad\n",
+    "\\frac{e^{-\\beta x}}{Z(\\beta)} = \\sum_{k=0}^\\infty \\frac{(-1)^k P_k(x)}{k!}\\beta^k.\n",
+    "$$\n",
+    "\n",
+    "このとき, $p(x)$ に対応する1重のHurwitz型ゼータ函数 $\\zeta(s,x;p)$ が\n",
+    "\n",
+    "$$\n",
+    "\\zeta(s,x;p) = \n",
+    "\\frac{1}{\\Gamma(s)}\n",
+    "\\int_0^\\infty \\frac{e^{-\\beta x}}{Z(\\beta)}\\beta^{s-2}\\,d\\beta\n",
+    "$$\n",
+    "\n",
+    "と定義されたのであった. 右辺の積分は $\\real s>1$ で絶対収束していると仮定する(おそらく他にも細かい条件を仮定しておかなければいけない)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "このとき, $\\zeta(s,x;p)$ の定義式は, 積分範囲を区間 $[1,\\infty)$ と区間 $(0,1)$ に分割して, 区間 $(0,1)$ 上での積分では $e^{-\\beta x}/Z(\\beta)$ の $\\beta$ について $N$ 次より大きな部分と $N$ 次以下の部分にわけて, $N$ 次以下の部分の積分を計算すると, 以下のように変形できることがわかる:\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\zeta(s,x;p) &=\n",
+    "\\frac{1}{\\Gamma(s)}\n",
+    "\\int_1^\\infty \\frac{e^{-\\beta x}}{Z(\\beta)}\\beta^{s-2}\\,d\\beta\n",
+    "\\\\ &\\,+\n",
+    "\\frac{1}{\\Gamma(s)}\n",
+    "\\int_0^1 \\left(\n",
+    "\\frac{e^{-\\beta x}}{Z(\\beta)}-\\frac{(-1)^k P_k(x)}{k!}\\beta^k\n",
+    "\\right)\\beta^{s-2}\\,d\\beta\n",
+    "\\\\ &\\,+\n",
+    "\\sum_{k=0}^N \\frac{(-1)^k P_k(x)}{k!}\n",
+    "\\frac{1}{(s+k-1)\\Gamma(s)}.\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "この変形の結果は $\\Re s > -N$ で意味を持ち, そこへの解析接続を与える. $N\\geqq r$ と仮定する.  $\\Gamma(s)$ はちょうど $s=0,-1,-2,\\ldots$ で1位の極を持つので, $s\\to 1-r$ のとき, 右辺で生き残る項は三段目の和の $k=r$ に対する項のみになる. そこで, $s\\to 1-r$ のとき, \n",
+    "\n",
+    "$$\n",
+    "\\frac{1}{(s+r-1)\\Gamma(s)} = \n",
+    "\\frac{(s+r-2)\\cdots(s+1)s}{\\Gamma(s+r)} \\to\n",
+    "(-1)^{r-1}(r-1)!\n",
+    "$$\n",
+    "\n",
+    "を使うと, \n",
+    "\n",
+    "$$\n",
+    "\\zeta(1-t,x;p) = \n",
+    "\\frac{(-1)^r P_r(x)}{r!} (-1)^{r-1}(r-1)! =\n",
+    "-\\frac{P_r(x)}{r}\n",
+    "\\quad (r=1,2,3,\\ldots)\n",
+    "$$\n",
+    "\n",
+    "となることがわかる."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**例:** $p(x)=\\frac{1}{2}(\\delta(x)+\\delta(x-1))$ のとき, 対応する一般化されたBernoulli多項式 $E_k(x)$ はEuler多項式になる:\n",
+    "\n",
+    "$$\n",
+    "\\frac{2e^{-\\beta x}}{1+e^{-\\beta}} = \\sum_{k=0}^\\infty\\frac{(-1)^k E_k(x)}{k!}\\beta^k.\n",
+    "$$\n",
+    "\n",
+    "そして, 対応する1重のHurwitz型ゼータ函数は\n",
+    "\n",
+    "$$\n",
+    "\\zeta(s,x;p) = \\frac{2}{s-1}\\sum_{k=0}^\\infty \\frac{(-1)^k}{(x+k)^{s-1}}\n",
+    "$$\n",
+    "\n",
+    "になる. これの解析接続について\n",
+    "\n",
+    "$$\n",
+    "\\zeta(1-r,x;p) = -\\frac{E_r(x)}{r}\n",
+    "\\quad (r=1,2,3,\\ldots).\n",
     "$$"
    ]
   },
