--- a/10 Gauss, Gamma, Beta.ipynb
+++ b/10 Gauss, Gamma, Beta.ipynb
@@ -9720,7 +9720,7 @@
    "id": "8e4e14edc28f77b6669165d1af460c30"
   },
   "kernelspec": {
-   "display_name": "Julia 1.1.0",
+   "display_name": "Julia 1.1.1",
    "language": "julia",
    "name": "julia-1.1"
   },
@@ -9728,9 +9728,10 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.1.0"
+   "version": "1.1.1"
   },
   "toc": {
+   "base_numbering": 1,
    "nav_menu": {},
    "number_sections": true,
    "sideBar": true,
