--- a/A02 Hurwitz zeta function.ipynb
+++ b/A02 Hurwitz zeta function.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "黒木玄\n",
     "\n",
-    "2019-04-01\n",
+    "2019-04-01～2019-07-13\n",
     "\n",
     "$\n",
     "\\newcommand\\ds{\\displaystyle}\n",
@@ -9181,7 +9181,7 @@
     "後者に $(-1)^r$ をかけて前者から引くと, それぞれの1段目と2段目の項はキャンセルして消え, 前者の3段目の項の2倍が残る:\n",
     "\n",
     "$$\n",
-    "-\\zeta(1-r,x)+(-1)^r\\zeta(1-r,1-x) =\n",
+    "-\\zeta_s(1-r,x)+(-1)^r\\zeta_s(1-r,1-x) =\n",
     "-\\pi i\n",
     "\\frac{(r-1)!}{(2\\pi i)^r}\n",
     "\\left(\\Li_s(e^{-2\\pi ix}) - (-1)^r\\Li_s(e^{2\\pi ix})\\right).\n",
