Pair Notebook with Markdown

--- a/10 Gauss, Gamma, Beta.ipynb
+++ b/10 Gauss, Gamma, Beta.ipynb
@@ -9719,6 +9719,9 @@
    },
    "id": "8e4e14edc28f77b6669165d1af460c30"
   },
+  "jupytext": {
+   "formats": "ipynb,md"
+  },
   "kernelspec": {
    "display_name": "Julia 1.1.1",
    "language": "julia",
