--- a/A04 zeta functions of partition functions.ipynb
+++ b/A04 zeta functions of partition functions.ipynb
@@ -240,6 +240,16 @@
    "lastCommId": null,
    "lastKernelId": null
   },
+  "_draft": {
+   "nbviewer_url": "https://gist.github.com/d7ee3629acdafb2a8fdd319c4c58f073"
+  },
+  "gist": {
+   "data": {
+    "description": "A04 zeta functions of partition functions",
+    "public": true
+   },
+   "id": "d7ee3629acdafb2a8fdd319c4c58f073"
+  },
   "kernelspec": {
    "display_name": "Julia 1.1.1",
    "language": "julia",
