minor corrections and Julia v1.1.1 to v1.4.1

--- a/A02 Hurwitz zeta function.ipynb
+++ b/A02 Hurwitz zeta function.ipynb
@@ -8,7 +8,11 @@
     "\n",
     "黒木玄\n",
     "\n",
-    "2019-04-01～2019-07-13\n",
+    "2019-04-01～2019-07-13, 2020-04-25\n",
+    "\n",
+    "* Copyright 2018,2019,2020 Gen Kuroki\n",
+    "* License: MIT https://opensource.org/licenses/MIT\n",
+    "* Repository: https://github.com/genkuroki/Calculus\n",
     "\n",
     "$\n",
     "\\newcommand\\ds{\\displaystyle}\n",
@@ -22232,6 +22236,9 @@
     "public": true
    },
    "id": "f58a3503ff5b14ee27b9f351db0e3fbc"
+  },
+  "jupytext": {
+   "formats": "ipynb,md"
   },
   "kernelspec": {
    "display_name": "Julia 1.4.1",
