minor correction (update link)

--- a/06 Taylor's theorems.ipynb
+++ b/06 Taylor's theorems.ipynb
@@ -5236,7 +5236,7 @@
     "\n",
     "* 大島利雄, <a href=\"https://web.archive.org/web/20180202163724/http://akagi.ms.u-tokyo.ac.jp/CAMPUS/ca.pdf\">関数論</a>, 2003年\n",
     "\n",
-    "* 斎藤恭司述, 松本佳彦記, <a href=\"http://www.ms.u-tokyo.ac.jp/web/htdocs/publication/documents/saito-lectures\">複素解析学特論</a>, 1978年, 2009年"
+    "* 斎藤恭司述, 松本佳彦記, <a href=\"http://www.ms.u-tokyo.ac.jp/publication/documents/saito-lectures.pdf\">複素解析学特論</a> (<a href=\"https://web.archive.org/web/20130626083906/http://www.ms.u-tokyo.ac.jp/publication/documents/saito-lectures.pdf\">archive</a>), 1978年, 2009年"
    ]
   },
   {
