--- a/06 Taylor's theorems.ipynb
+++ b/06 Taylor's theorems.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "黒木玄\n",
     "\n",
-    "2018-04-20～2019-04-03\n",
+    "2018-04-20～2019-04-03, 2020-08-18\n",
     "\n",
     "* Copyright 2018,2019 Gen Kuroki\n",
     "* License: MIT https://opensource.org/licenses/MIT\n",
@@ -142,7 +142,7 @@
     "$$\n",
     "\\begin{aligned}\n",
     "f''(x) &= \n",
-    "f''(a) + \\int_0^x f'''(x_3)\\,dx_3\n",
+    "f''(a) + \\int_a^x f'''(x_3)\\,dx_3\n",
     "\\\\ & =\n",
     "f''(a) + f'''(a)(x-a) + \\int_a^x\\left[\\int_a^{x_3} f^{(4)}(x_4)\\,dx_4\\right]\\,dx_3.\n",
     "\\end{aligned}\n",
