--- a/02 series.ipynb
+++ b/02 series.ipynb
@@ -818,10 +818,17 @@
     "$$\n",
     "\\sum_{n=1}^\\infty a_n < \n",
     "8.23 + 1.64\\sum_{k=5}^\\infty \\frac{9^{k-4}}{10^{k-4}} =\n",
-    "8.23 + 1.08\\frac{9/10}{1-9/10} = 22.99 < 23.\n",
+    "8.23 + 1.64\\frac{9/10}{1-9/10} = 22.99 < 23.\n",
     "$$\n",
     "\n",
     "これで $\\ds\\sum_{n=1}^\\infty a_n < 23$ が示された. $\\QED$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**注意:** 上の問題における $\\ds\\sum_{n=1}^\\infty a_n$ の真の値は $22.9206766192\\cdots$ なので, 上の問題の結論は上からの悪くない評価を与えている. この級数は [Kempner series](https://en.wikipedia.org/wiki/Kempner_series) と呼ばれることがあるらしい. $\\QED$"
    ]
   },
   {
